# cdumay_core

./: Cargo.toml  README.md
src/: lib.rs  macros.rs  result.rs
src/error/: builder.rs  convert.rs  error.rs  kind.rs  mod.rs
tests/: error.rs  error_converter.rs  macros.rs  result.rs
